amended media queries property values to fix quiz display on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,8 +216,7 @@ Center object in div - [https://www.freecodecamp.org/news/how-to-center-anything
 
 /*QUIZ HOMEPAGE*/
 section {
-	margin: 20px;
-	padding: 30px;
+	padding: 20px;
 	text-align: center;
 	display: block;
 	border-radius: 20px;
@@ -309,7 +308,6 @@ section:hover {
 #game > h2 {
 	padding: 10px;
 	color: rgb(239, 130, 62);
-	margin-bottom: 30px;
 	margin-bottom: 30px;
 }
 
@@ -530,7 +528,6 @@ Reference material:
 }
 
 .return-content > h1 {
-	font-size: 50px;
 	text-align: center;
 	color: rgb(255, 255, 255);
 	flex-direction: column;
@@ -562,10 +559,22 @@ Reference material:
 	font-weight: 600;
 }
 
-.hidden{
+.hidden {
 	display: none;
-	/* this ensures nothing displays */
+	/*disables the display of points until prompted*/
 }
+
+#gamefin{
+	font-size: 35px;
+}
+
+#pointsDisplay{
+	font-size: 50px;
+	border: 6px solid rgb(239, 130, 62);
+	border-radius: 50px;	
+	padding: 30px;
+}
+
 /*PHRASESHEET PAGE*/
 #phrasesheet-descript {
 	box-shadow: 3.5px 3.5px 3.5px rgb(90, 87, 87, .5);
@@ -747,6 +756,7 @@ form > input:hover {
 @media only screen and (max-width: 320px) {
 	.main-cont {
 		display: grid;
+		width: 100%;
 		height: auto; /*auto makes the content adjust to viewport so elements dont overlap*/
 		grid-template-columns: 1fr;
 		grid-template-rows: auto;
@@ -768,22 +778,37 @@ form > input:hover {
 	.nav-MU > li {
 		line-height: 20px;
 		padding-bottom: 50px;
+		font-size: 20px;
 	}
 
+	.nav-MU > li:hover {
+		font-size: 22px;
+	}
+	
 	.nav-MU.show {
 		display: flex;
+	}
+
+	#bamisoro-logo {
+		width: 150px;
+		height: 150px;
+		margin: 20px;
+	}
+
+	#bamisoro-logo:hover {
+		width: 150px;
+		height: 150px;
 	}
 	
 	.ham {
 		display: block;
 		margin-left: auto;
-		margin-right: 30px;
 		font-size: 40px;
-		margin-right: 30px;
+		margin-right: 50px;
 	}
 
 	.ham:hover {
-		font-size: 60px;
+		font-size: 45px;
 	}
 
 	#enter-bamisoro-logo {
@@ -811,6 +836,11 @@ form > input:hover {
 		margin-bottom: 5px;
 	} 
 
+	form > img {
+	width: 50%;
+	height: 50%;
+   }
+
 	form > span {
 		margin-bottom: 30px;
 		font-weight: 400;
@@ -824,11 +854,14 @@ form > input:hover {
 		padding: 10px;
 		margin-right: 10px
 	}
+
+	.footer-links > a:hover {
+		font-size: 25px;
+	}
 	
 	.logo-footer {
-		width: 55px;
-		height: 55px;
-		margin-right: 40px;
+		width: 50px;
+		height: 50px;
 	}
 
 	.quiz-lvl-boxes {
@@ -846,10 +879,10 @@ form > input:hover {
 		height: 75%;
 	}
 
-	#intermediateqs {
-		padding: 10px;
-		font-size: 25px;
-	}	
+	.quiz-cont {
+		margin-left: auto;
+		margin-right:auto;
+	}
 
 	.optionsbl {
 		width: 150px;
@@ -870,7 +903,6 @@ form > input:hover {
 		margin-bottom: 30px;
 		font-size: 25px;
 	}
-
 }
 
 /*For medium screens*/
@@ -964,8 +996,7 @@ form > input:hover {
 	.quiz-lvl-boxes {
 		text-align: center;
 		display: block;
-	}
-	
+	}	
 }
 
 
